BAU: Replace Collectors.toList with toList
It's less verbose and returns an unmodiffiable list.